# Brain-Semantoks

./: .gitignore  README.md  example.ipynb  finetune.py  linear_probe.py  main.py  network_mapping.npz  pyproject.toml  requirements.txt  simdino.py
config/: example_config.yaml
data/: dataset.py
model/: __init__.py  dino_head.py  model_wrapper.py  semantoks.py  simdino_loss.py  tokenizer.py
util/: param_groups.py  util.py
